--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "babel.config.js"
   ],
   "bin": {
-    "evershop": "./bin/evershop"
+    "evershop": "bin/evershop"
   },
   "workspaces": [
     "packages/*",
@@ -30,7 +30,7 @@
     "prepare": "husky install"
   },
   "author": "The Nguyen (https://evershop.io)",
-  "license": "GNU GENERAL PUBLIC LICENSE 3.0",
+  "license": "UNLICENSED",
   "devDependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.14.8",
@@ -52,5 +52,9 @@
     "rxjs": "^7.2.0",
     "tailwindcss": "^3.2.1",
     "webpack-bundle-analyzer": "^4.5.0"
-  }
+  },
+  "dependencies": {
+    "@evershop/evershop": "^1.0.0-rc.8"
+  },
+  "main": "babel.config.js"
 }
